# cluster-status

./: .gitignore  CLAUDE.md  README.md  setup.md
cluster-dash-mole/: README.md  config_molgpu01.toml  config_molgpu02.toml  config_molgpu07.toml  main.py  pyproject.toml  smart_startup.py
cluster-dash-mole/cluster_dash_mole/: comms.py  cpu_data.py  general_machine_data.py  gpu_data.py  logging_utils.py  main.py  settings_loader.py  thread_safe_utils.py  utils.py
cluster-dash-server/: .gitignore  README.md  main.py  pyproject.toml  start_up.sh
cluster-dash-server/cluster_dash_server/: __init__.py  history.py  machine-post-schema.json
cluster-dash-server/cluster_dash_server/static/scripts/: renderDemoData.js  renderGpuData.js
cluster-dash-server/cluster_dash_server/static/scripts/dashboard/: api.js  gpuDetails.js  main.js  summaryCards.js  utils.js
cluster-dash-server/cluster_dash_server/static/scripts/history/: api.js  charts.js  main.js
cluster-dash-server/cluster_dash_server/static/styles/: dashboard.css
cluster-dash-server/cluster_dash_server/templates/: base.html  dashboard.html  history.html  index.html  no-data.html  plotly_express.html  simple_chart.html
cluster-dash-server/etc/: example_data1.json  example_data2.json
